--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h1 class="text-todo-Very-Light-Gray text-4xl tracking-widest">TODO</h1>
         </div>
         <div>
-          <img src="/images/icon-sun.svg" alt="sun icon">
+          <img class="cursor-pointer" src="/images/icon-sun.svg" alt="sun icon">
         </div>
       </header>
       <div class="itemDiv bg-todo-Very-Dark-Grayish-Blue flex justify-between p-3 rounded-t-lg">
@@ -38,7 +38,7 @@
           <li>
             <div class=" text-white itemDiv bg-todo-Very-Dark-Grayish-Blue flex justify-between p-3 rounded-b-lg ">
               <!-- <div class="itemDivLeft flex p-1 gap-4 w-[80%]"> -->
-                <span>items left</span>
+                <span class="task-count">items left</span>
                 <div class="flex justify-between gap-2">
                   <span>All</span>Active<span>Completed</span>
                 </div>
